--- a/ticket-project/package.json
+++ b/ticket-project/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
