--- a/ticket-project/package.json
+++ b/ticket-project/package.json
@@ -12,6 +12,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "use-query-params": "^1.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
