--- a/ticket-project/package.json
+++ b/ticket-project/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "query-string": "1.1.6",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "use-query-params": "^1.2.3",
+    "use-query-params": "^1.1.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
